Added profile links to my profile

--- a/profiles/b3p0.md
+++ b/profiles/b3p0.md
@@ -16,3 +16,11 @@ Every animal
 
 ### Your Favorite Dessert
 Tiramisu
+
+### Profiles
+[![GitHub][github-img]](https://github.com/b3p0) 
+[![Twitter][twitter-img]](https://twitter.com/perprika)  
+
+<!-- Don't edit the below 2 lines -->
+[twitter-img]: https://i.imgur.com/wWzX9uB.png
+[github-img]: https://i.imgur.com/9I6NRUm.png
